<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="site_filter_hint">Enter site</string>
    <string name="more_button_text">More</string>
 	<string-array name="image_size_array">
 	    <item></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>huge</item>
    </string-array>
    <string-array name="color_filter_array">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type_array">
        <item></item>
        <item>faces</item>
        <item>photos</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    
</resources>
